# Airsoft2.0

./: .env  .gitignore  Dockerfile  RENDER_DEPLOY.md  api.http  db.sqlite3  docker-compose.yml  nginx.conf  prod.py  pyproject.toml  render.yaml
config/: settings.py  urls.py
http/: api.http  quiz.http
picker/: models.py  tests.py
picker/api/: serializers.py  urls.py  views.py
picker/data/: product_catalog.py  quiz_questions.py
picker/management/commands/: seed_products.py
picker/migrations/: 0001_initial.py  0002_remove_realism_score.py  0003_add_weight_score_and_ergonomics_priority.py  0004_refine_weight_scores.py  0005_calibrate_product_scores.py  0006_sync_semantic_role_tags.py  0007_remove_product_is_active.py  0008_add_upgrade_potential_scores.py
picker/services/: scoring.py
scripts/: backup.sh  render-start.sh
