[project]
name = "airsoft2-0"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.14.0",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-stubs>=3.17.0",
    "gunicorn>=26.0.0",
    "pillow>=12.3.0",
    "python-dotenv>=1.2.2",
    "whitenoise>=6.12.0",
]
